--- a/My_Theme_Collection/BNHA.theme.css
+++ b/My_Theme_Collection/BNHA.theme.css
@@ -30,7 +30,136 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 .theme-dark .children-19S4PO:after {
     background: none;
 }
+ 
+.option-3KoAJB.focused-1T6PE5 {
+    color: white; 
+    background-color: rgba(0, 0, 0, .53) !important;
+}
+
+.tutorialIcon-3f1miQ {
+    background-color: #008c99;
+    color: white;
+    border-radius: 30px;
+}
+
+.emptyChannelIcon-cc932w {
+    border-radius: 30px;
+    background-color: #008c99;
+}
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+.tile-2naSqK {
+    background-color: transparent;
+}
+.card-3RzMcx {
+    background-color: rgba(0, 0, 0, .30) !important;
+}
+
+.card-2Mz_4z {
+    border-radius: 5px;
+    color: white;
+    border: 1px solid #008c99;
+    background-color: rgba(0, 140, 153, .3);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+  box-shadow: inset 0 0 0 2px #008c99, inset 0 0 0 3px #000;
+}
+.sourceThumbnail-27dolk {
+    background-color: transparent;
+}
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgba(0, 140, 153, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #008c99;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(0, 140, 153, .6);
+}
   
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+    box-shadow: inset 0 0 0 2px #008c99;
+}
+
+.wrapper-39oAo3 {
+    background-color: rgba(0, 0, 0, .23);
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+    color: white;
+    background-color: transparent;
+    border: 1px solid #4f545c;
+}
+
+.tutorial-3w5I9h {
+    background-color: rgba(0, 0, 0, .26);
+}
+
+.settingCard-3w2mVL.active-1ytUzX {
+    background: rgba(0, 0, 0, .7);
+}
+
+.settingCard-3w2mVL {
+    background: rgba(0, 0, 0, .7);
+    border-radius: 5px;
+}
+
+.cardFolder-28dwxo {
+    background-color: transparent;
+}
+
+.wrapper-2Gsate {
+    background: #262424;
+}
+
+.selected-3xBBKs, .selected-3xBBKs:hover {
+    background-color: rgba(0, 0, 0, .23);
+}
+  
+.selected-3xBBKs .icon-2VCx8O, .selected-3xBBKs:hover .icon-2VCx8O, .icon-2VCx8O {
+    color: white;
+}
+
+.button-F9qN4n {
+    border-radius: 50px;
+    background-color: rgba(0, 0, 0, .17) !important;
+}
+
+  .customItem-a8hq58 {
+    border-color: transparent;
+    color: white;
+}
+
+.theme-dark .activeButton-rvKcqq, .theme-dark .activeButton-rvKcqq:hover {
+    background-color:#008c99;
+}
+   
+.pageButton-2ruNwd:hover {
+     color: white;
+     background-color: rgba(0, 0, 0, .33);
+}
+   
+.roundButton-CEHyUp {
+     border-radius: 50px;
+}
+
+.theme-dark .barBase-1c2Rfb {
+    background-color:rgba(0, 0, 0, .34);
+    opacity: .75;
+}
 
 #app-mount .app-2rEoOp {
     background-image: linear-gradient(45deg, rgba(0, 0, 0, 0.77) 0%, rgba(82, 82, 82, 0.735) 80%), url(https://images8.alphacoders.com/736/736903.jpg);
@@ -1691,10 +1820,6 @@ body, div, span, textarea, ::-webkit-input-placeholder {
     background: none;
 }
 
-.wrapper-2Gsate {
-    background: none;
-}
-
 
 
 /* Discord and BetterDiscord Settings */
@@ -2309,7 +2434,9 @@ body, div, span, textarea, ::-webkit-input-placeholder {
   .theme-dark .container-2x5lvQ section a,
   .fakeLink-26oLcc,
   .metadataContent-3c_ZXw a,
-  .editChannelButton-1dYN-G {
+  .editChannelButton-1dYN-G,
+  .button-18p_f6,
+  .footerText-2a7NxZ a {
       color: #66cff9;
 }
 
@@ -2355,6 +2482,11 @@ body, div, span, textarea, ::-webkit-input-placeholder {
 	border-radius: 4px;
 	border: 1px solid #008c99;
 	background-color: rgba(0, 0, 0, .4);
+}
+
+.container-UC8Ug1 .colorStandard-2KCXvj,
+.colorHeaderPrimary-26Jzh- {
+    color: white;
 }
 
 .unreadPill-2HyYtt {
