--- a/My_Theme_Collection/BubblesReturns.theme.css
+++ b/My_Theme_Collection/BubblesReturns.theme.css
@@ -8,6 +8,111 @@
 	font-family: Calibri !important;
 }
 
+.option-3KoAJB.focused-1T6PE5 {
+	background-color: rgba(0, 0, 0, .33);
+}
+
+.tutorialIcon-3f1miQ {
+	background: linear-gradient(5deg, transparent 70%, rgba(204, 227, 246, 0.50) 100%);
+    border: 2px solid rgba(204, 227, 246, 0.60);
+    box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+	color: white;
+	border-radius: 30px;
+}
+
+.emptyChannelIcon-cc932w {
+    border-radius: 30px;
+    background: linear-gradient(5deg, transparent 70%, rgba(204, 227, 246, 0.50) 100%);
+    border: 2px solid rgba(204, 227, 246, 0.60);
+    box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+}
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+.tile-2naSqK {
+    background-color: transparent;
+}
+.card-3RzMcx {
+    background-color: rgba(0, 0, 0, .30) !important;
+}
+
+.sourceThumbnail-27dolk {
+    background-color: transparent;
+}
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 30px 30px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgba(204, 227, 246, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #cce3f6;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(204, 227, 246, .6);
+}
+
+.card-2Mz_4z {
+    border-radius: 30px;
+    color: white;
+    border: 2px solid rgba(204, 227, 246, 0.60);
+    box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+    background: linear-gradient(5deg, transparent 70%, rgba(204, 227, 246, 0.50) 100%);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+	border: 2px solid rgba(204, 227, 246, 0.60);
+    box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+    background: linear-gradient(5deg, transparent 70%, rgba(204, 227, 246, 0.50) 100%);
+}
+  
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+    box-shadow: inset 0 0 0 2px rgba(204, 227, 246, 0.60);
+}
+
+.wrapper-39oAo3 {
+    background-color: rgba(0, 0, 0, .23);
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+    color: white;
+    background-color: transparent;
+    border: 1px solid #4f545c;
+}
+
+.tutorial-3w5I9h {
+    background-color: rgba(0, 0, 0, .26);
+}
+
+.theme-dark .activeButton-rvKcqq, 
+.theme-dark .activeButton-rvKcqq:hover {
+	background: linear-gradient(5deg, transparent 70%, rgba(204, 227, 246, 0.50) 100%);
+    color: white;
+    border: 2px solid rgba(204, 227, 246, 0.60);
+    box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.40);
+}
+
+.theme-dark .barBase-1c2Rfb {
+    background-color:rgba(0, 0, 0, .34);
+    opacity: .75;
+}
+
+.pageButton-2ruNwd {
+    color: white;
+}
+
+.pageButton-2ruNwd:hover {
+    color: white;
+    background-color: rgba(0, 0, 0, .26);
+}
 
 #app-mount .app-2rEoOp {
 	background: url(https://images.alphacoders.com/151/151713.jpg) 30%/cover;
@@ -59,6 +164,25 @@
 	border: 2px solid rgba(0, 0, 0, 0.66);
 	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
 	opacity: 0.8;
+}
+
+.settingCard-3w2mVL.active-1ytUzX {
+	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
+	background-size: cover;
+	border: 2px solid rgba(0, 0, 0, 0.66);
+	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
+}
+
+.settingCard-3w2mVL {
+	background-image: linear-gradient(45deg, rgba(4, 8, 120, 0.66) 0%, rgba(118, 13, 11, 0.54) 100%), url(https://images8.alphacoders.com/782/782017.jpg);
+	background-size: cover;
+	border-radius: 5px;
+	border: 2px solid rgba(0, 0, 0, 0.66);
+	box-shadow: inset 0 0 26px 5px rgba(0, 0, 0, 0.66);
+}
+
+.cardFolder-28dwxo {
+    background-color: transparent;
 }
 
 .protip-1b9XPC {
@@ -405,6 +529,12 @@
 	border-radius: 4px;
 	border: 1px solid rgba(4, 8, 120, 0.66);
 	background-color: rgba(0, 0, 0, .4);
+}
+
+.container-UC8Ug1 .colorStandard-2KCXvj,
+.colorHeaderPrimary-26Jzh-,
+.footer-2gL1pp .colorStandard-2KCXvj{
+    color: white;
 }
 
 .theme-dark .inset-3sAvek,
@@ -1950,7 +2080,7 @@
     box-shadow: inset 0 0 6px 1px rgba(204, 227, 246, 0.523);
 	background-color: rgba(65, 95, 132, 0.58);
 	padding: 3px 2px;
-	top: -.6em;
+	top: -.1em;
 	position: relative;
 	border-radius: 40px;
 }
@@ -2742,7 +2872,9 @@
   .colorStandard-2KCXvj a,
 	.theme-dark .filenameLinkWrapper-1-14c5,
 	.editChannelButton-1dYN-G,
-	.content-s2SEQO a {
+	.content-s2SEQO a,
+	.button-18p_f6,
+	.footerText-2a7NxZ a {
 	  color: #2ccebe;
 	  text-shadow: 0 4px 4px black,0 4px 4px black,0 4px 4px black,0 4px 4px black,0 4px 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black,0 0 4px black;
 	}
