--- a/My_Theme_Collection/Great_Mountain_Site.theme.css
+++ b/My_Theme_Collection/Great_Mountain_Site.theme.css
@@ -9,6 +9,167 @@
   background-size: cover;
 } 
 
+.cozy-3raOZG .repliedMessage-VokQwo {
+  margin-bottom: var(--reply-spacing);
+}
+
+.repliedMessage-VokQwo {
+  --reply-spacing: 10px;
+}
+.repliedTextPreview-2NBljf {
+  overflow: visible;
+  margin-bottom: 20px;
+  position: relative;
+  top: -3px;
+}
+
+.repliedTextPreview-2NBljf .repliedTextPlaceholder-dmN7D1 {
+  overflow: visible;
+  margin-bottom: 0px;
+  position: relative;
+  top: 13px;
+}
+
+.settingCard-3w2mVL.active-1ytUzX {
+  background: rgba(0, 0, 0, .7);
+}
+
+.settingCard-3w2mVL {
+  background: rgba(0, 0, 0, .7);
+  border-radius: 5px;
+}
+
+.cardFolder-28dwxo {
+  background-color: transparent;
+}
+
+.tutorialIcon-3f1miQ {
+  background-color:  #ca9e73;
+  color: white;
+  border-radius: 30px;
+}
+
+.emptyChannelIcon-cc932w {
+  border-radius: 30px;
+  background-color: #ca9e73;
+}
+
+.wrapper-39oAo3 {
+  background-color: rgba(0, 0, 0, .23);
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+  color: white;
+  background-color: transparent;
+  border: 1px solid #4f545c;
+}
+
+.sourceThumbnail-27dolk {
+  background-color: transparent;
+}
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+.tile-2naSqK {
+  background-color: transparent;
+}
+.card-3RzMcx {
+  background-color: rgba(0, 0, 0, .30) !important;
+}
+
+.card-2Mz_4z {
+  border-radius: 5px;
+  color: white;
+  border: 1px solid #ca9e73;
+  background-color: rgba(202, 158, 115, .3);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+  box-shadow: inset 0 0 0 2px #ca9e73, inset 0 0 0 3px #000;
+}
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+  box-shadow: inset 0 0 0 2px #ca9e73;
+}
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgba(202, 158, 115, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #ca9e73;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(202, 158, 115, .6);
+}
+
+.option-3KoAJB.focused-1T6PE5  {
+  background-color: #ca9e73!important;
+}
+
+.button-F9qN4n {
+background-color: #ca9e73;
+}
+
+.button-F9qN4n:hover, .keyboard-mode .button-F9qN4n.focused-3ZzkKr {
+background-color: #d59e68;
+}
+
+.theme-dark .activeButton-rvKcqq, .theme-dark .activeButton-rvKcqq:hover {
+background-color: #ca9e73;
+}
+
+.pageButton-2ruNwd {
+color: white;
+}
+
+.pageButton-2ruNwd:hover {
+color: white;
+background-color: #d59e68;
+}
+
+.tutorial-3w5I9h {
+background-color: rgba(0, 0, 0, .22);
+border-radius: 8px;
+padding: 16px;
+margin: 16px 0;
+}
+
+.messages-3G3erD .markup-2BOw-j {
+top: -3px;
+left: -1px;
+}
+
+.live-vBWnV6 {
+background-color: #ca9e73  !important;
+}
+
+.theme-dark .barBase-1c2Rfb {
+  background-color:rgba(0, 0, 0, .34);
+  opacity: .75;
+}
+
+.wrapper-uf3cnO {
+  background-color: transparent;
+}
+
+.selected-3xBBKs, .selected-3xBBKs:hover {
+  background-color: rgba(0, 0, 0, .4);
+}
+
+.selected-3xBBKs .icon-2VCx8O, .selected-3xBBKs:hover .icon-2VCx8O, .icon-2VCx8O {
+  color: white;
+}
+
+
 @keyframes colorOpacity {
   0% {background-color: rgba(202, 158, 115, 0)}
   25% {background-color: rgba(202, 158, 115, .5)}
@@ -615,7 +776,8 @@
     box-shadow: none;
 }
 
-.colorHeaderSecondary-3Sp3Ft {
+.colorHeaderSecondary-3Sp3Ft,
+.colorHeaderPrimary-26Jzh- {
   color: white;
 }
 
@@ -1195,8 +1357,8 @@
 }
 .container-1ov-mD>* {
   position: relative;
-  top: 12px;
-  right: -7px;
+  top: 2px;
+  right: -1px;
 }
 .embedContent-3fnYWm .markup-2BOw-j {
   position: relative;
@@ -1212,21 +1374,24 @@
 .slateTextArea-1bp44y .hljs-quote {
     color: white;
 }
+.repliedMessage-VokQwo .repliedTextPreview-2NBljf .repliedTextContent-1R3vnK, .threadMessageAccessory-1pYyA- .threadMessageAccessoryPreview-1uSsue .threadMessageAccessoryContent-1LHM39 {
+  margin-bottom: -20px;
+}
 .markup-2BOw-j {
   position: relative;
   color: white;
-  top: 12px;
-  right: -7px;
+  top: 1px;
+  right: -1px;
   text-shadow: 0 0 23px black,0 0 23px black,0 0 23px black,0 0 23px black;
 }
 .mentioned-xhSam7 .markup-2BOw-j {
   position: relative;
-  top: 2px;
+  top: 5px;
 }
 
 .mentioned-xhSam7 {
   position: relative;
-  top: 12px;
+  top: 2px;
   padding-bottom: 16px !important;
 }
 
@@ -1674,8 +1839,7 @@
 }
 
 .theme-dark .searchHeader-2XoQg7 {
-  color: white; 
-  box-shadow: none;
+  background-color: transparent;
 }
 
 .detailsBlock-FoDTGA {
@@ -2011,7 +2175,9 @@
 .emptyStateSubtext-2njjqg a,
 .theme-dark .container-2x5lvQ section a,
 .colorStandard-2KCXvj a,
-.editChannelButton-1dYN-G {
+.editChannelButton-1dYN-G,
+.button-18p_f6,
+.footerText-2a7NxZ a {
     color: #6670ED;
 }
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {
