--- a/My_Theme_Collection/No_Game_No_Life.theme.css
+++ b/My_Theme_Collection/No_Game_No_Life.theme.css
@@ -10,6 +10,145 @@
     background-size: cover;
 }
 
+.wrapper-2Gsate {
+    background-color: transparent;
+}
+.selected-3xBBKs, .selected-3xBBKs:hover {
+    background-color: rgba(0, 0, 0, .23);
+}
+
+.settingCard-3w2mVL.active-1ytUzX {
+    background: rgba(0, 0, 0, .7);
+}
+
+.settingCard-3w2mVL {
+    background: rgba(0, 0, 0, .7);
+    border-radius: 5px;
+}
+
+.cardFolder-28dwxo {
+    background-color: transparent;
+}
+
+.button-F9qN4n {
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, .17);
+}
+
+.customItem-a8hq58 {
+    border-color: transparent;
+    color: var(--word-color);
+}
+
+.button-F9qN4n:hover, .keyboard-mode .button-F9qN4n.focused-3ZzkKr {
+    background-color: #901E50;
+}
+
+.sourceThumbnail-27dolk {
+	background-color: transparent;
+}
+
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+  
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+	box-shadow: inset 0 0 0 2px #901E50;
+}
+
+.tile-2naSqK {
+	background-color: transparent;
+}
+.card-3RzMcx {
+	background-color: rgba(0, 0, 0, .30) !important;
+}
+  
+.card-2Mz_4z {
+	border-radius: 5px;
+	color: white;
+	border: 1px solid #901E50;
+	background-color: rgba(144, 30, 80, .3);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+	box-shadow: inset 0 0 0 2px #901E50, inset 0 0 0 3px #000;
+}
+.emptyChannelIcon-cc932w {
+  border-radius: 6px;
+  background-color: #901E50;
+}
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgba(144, 30, 80, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #901E50;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(144, 30, 80, .6);
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+    color: white;
+    background-color: transparent;
+    border: 1px solid #4f545c;
+}
+
+.wrapper-39oAo3 {
+    background-color: rgba(0, 0, 0, .23);
+}
+
+.tutorialIcon-3f1miQ {
+    background-color:  #901E50;
+    color: white;
+    border-radius: 6px;
+  }
+
+.selected-3xBBKs .icon-2VCx8O, .selected-3xBBKs:hover .icon-2VCx8O, .icon-2VCx8O {
+    color: white;
+}
+
+.theme-dark .activeButton-rvKcqq, .theme-dark .activeButton-rvKcqq:hover {
+    background-color:#901E50;
+}
+   
+.pageButton-2ruNwd:hover {
+     color: white;
+     background-color: #582060;
+}
+
+.base-PmTxvP {
+    background-color: #582060 !important;
+}
+
+   
+.roundButton-CEHyUp {
+     border-radius: 4px;
+}
+
+.option-3KoAJB.focused-1T6PE5 {
+    color: white; 
+    background-color:#901E50 !important;
+}
+
+.wrapper-uf3cnO {
+    background-color: transparent;
+}
+
+.tutorial-3w5I9h {
+    background-color: rgb(0, 0, 0, 0.13);
+}
+
 .guildSeparator-3s64Iy {
     background: none;
 }
@@ -96,6 +235,10 @@
 	color: white;
 }
 
+.textarea-2r0oV8:focus {
+    background-color: rgba(0, 0, 0, .24);
+}
+
 .tooltip-2QfLtc {
 	border-radius: 7px;
 }
@@ -155,7 +298,10 @@
     background-color: rgba(0,0,0,.2);
 }
 
-.colorHeaderSecondary-3Sp3Ft {
+.colorHeaderSecondary-3Sp3Ft,
+.colorHeaderPrimary-26Jzh-,
+.container-UC8Ug1 .colorStandard-2KCXvj,
+.footer-2gL1pp .colorStandard-2KCXvj  {
     color: white;
 }
 
@@ -2400,7 +2546,7 @@
 
 .theme-dark .embedTitleLink-1Zla9e {color: #F29022 !important;}
 
-.standardSidebarView-3F1I7i a, .imageDetails-1t6Zms a, .metadataContent-3c_ZXw a,  .theme-dark .card-3Qj_Yx a, .editChannelButton-1dYN-G, .bda-slist .bda-footer a,.content-s2SEQO a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
+.standardSidebarView-3F1I7i a, .footerText-2a7NxZ a, .imageDetails-1t6Zms a, .metadataContent-3c_ZXw a,  .theme-dark .card-3Qj_Yx a, .editChannelButton-1dYN-G, .bda-slist .bda-footer a,.content-s2SEQO a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.button-18p_f6,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
 
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {background-image: linear-gradient(0deg, transparent, transparent 1px, #F29022 0, #F29022 2px, transparent 0);}
 
