--- a/My_Theme_Collection/Sunset_Theme.theme.css
+++ b/My_Theme_Collection/Sunset_Theme.theme.css
@@ -10,6 +10,19 @@
     background-size: cover;
 }
 
+.settingCard-3w2mVL.active-1ytUzX {
+    background: rgba(0, 0, 0, .7);
+}
+
+.settingCard-3w2mVL {
+    background: rgba(0, 0, 0, .7);
+    border-radius: 5px;
+}
+
+.cardFolder-28dwxo {
+    background-color: transparent;
+}
+
 .layers-3iHuyZ {
     background-color: rgba(0, 0, 0, 0.52);
 }
@@ -122,6 +135,76 @@
     background-color: #731838;
 }
 
+.tutorialIcon-3f1miQ {
+    background-color:  #731838;
+    color: white;
+    border-radius: 6px;
+}
+
+.emptyChannelIcon-cc932w {
+  border-radius: 6px;
+  background-color: #731838;
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+    color: white;
+    background-color: transparent;
+    border: 1px solid #4f545c;
+}
+
+.wrapper-39oAo3 {
+    background-color: rgba(0, 0, 0, .23);
+}
+
+.sourceThumbnail-27dolk {
+	background-color: transparent;
+  }
+  
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+	box-shadow: inset 0 0 0 2px #731838;
+}
+
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+
+.tile-2naSqK {
+	background-color: transparent;
+}
+.card-3RzMcx {
+	background-color: rgba(0, 0, 0, .30) !important;
+}
+  
+.card-2Mz_4z {
+	border-radius: 5px;
+	color: white;
+	border: 1px solid #731838;
+	background-color: rgba(115, 24, 56, .3);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+	box-shadow: inset 0 0 0 2px #731838, inset 0 0 0 3px #000;
+} 
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgba(115, 24, 56, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #731838;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(115, 24, 56, .6);
+}
 .h5-18_1nd,
 .theme-dark .userSettingsAccount-2eMFVR .viewBody-2Qz-jg {
     color: white;
@@ -707,7 +790,10 @@
     box-shadow: none;
 }
 
-.colorHeaderSecondary-3Sp3Ft {
+.colorHeaderSecondary-3Sp3Ft,
+.container-UC8Ug1 .colorStandard-2KCXvj,
+.colorHeaderPrimary-26Jzh-,
+.footer-2gL1pp .colorStandard-2KCXvj {
     color: white;
 }
 
@@ -2411,7 +2497,7 @@
 
 .theme-dark .embedTitleLink-1Zla9e {color: #F29022 !important;}
 
-.standardSidebarView-3F1I7i a, .imageDetails-1t6Zms a, .theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a, .editChannelButton-1dYN-G, .content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .metadataContent-3c_ZXw a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc {color: #F29022;}
+.standardSidebarView-3F1I7i a, .footerText-2a7NxZ a, .imageDetails-1t6Zms a, .theme-dark .card-3Qj_Yx a,.bda-slist .bda-footer a, .editChannelButton-1dYN-G, .content-8biNdB a,.footer-3rDWdC a,.lookLink-9FtZy-.colorLink-35jkBc,.theme-dark .markup-2BOw-j a,.quickswitcher-3JagVE a,.theme-dark .topic-TCb_qw a,.filenameLinkWrapper-1-14c5 a,.operations-36ENbA>a,.theme-dark .welcomeMessage-ULm0mo a,.localBotMessage-1cGMdw a,.theme-dark .container-3-pyIM .content-2M3n_H a,.helpText-h3r3wC a,.lookLink-9FtZy-.colorBrand-3pXr91,.emptyStateSubtext-2njjqg a,.theme-dark .container-2x5lvQ section a,.colorStandard-2KCXvj a, .description-3_Ncsb a, .metadataContent-3c_ZXw a, .giftBlurb-4VKZWm a, .theme-dark .filenameLinkWrapper-1-14c5, .fakeLink-26oLcc, .button-18p_f6 {color: #F29022;}
 
 .lookLink-9FtZy-.colorLink-35jkBc:hover .contents-18-Yxp {background-image: linear-gradient(0deg, transparent, transparent 1px, #F29022 0, #F29022 2px, transparent 0);}
 
