--- a/My_Theme_Collection/CatJar.theme.css
+++ b/My_Theme_Collection/CatJar.theme.css
@@ -11,6 +11,144 @@
   background-image: url(https://images5.alphacoders.com/106/1066789.png);
 }
 
+.wrapper-2Gsate {
+  background-color: transparent;
+}
+
+.tutorialIcon-3f1miQ {
+  background-color: #805d4c;
+  color: white;
+  border-radius: 7px;
+}
+
+.sourceThumbnail-27dolk {
+  background-color: transparent;
+}
+
+.tile-2w4k5N:hover .sourceThumbnail-27dolk,
+.sourceThumbnail-27dolk.selected-1nOkyc {
+  box-shadow: inset 0 0 0 2px #805d4c;
+}
+
+.theme-dark .item-3T2z1R {
+  border-color: transparent;
+}
+
+.item-3T2z1R:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+.selectorButton-EEUWed {
+  background-color: rgb(128, 93, 76, .3);
+}
+
+#app-mount .selectorButtonSelected-t5V9On {
+  background-color: #805d4c;
+}
+
+.selectorButton-EEUWed:not(.selectorButtonPremiumRequired-mKMbIu):hover {
+  background-color: rgba(128, 93, 76, .6);
+}
+
+.card-2Mz_4z {
+  border-radius: 5px;
+  color: white;
+  border: 1px solid #805d4c;
+  background-color: rgba(128, 93, 76, .3);
+}
+.border-3dQmSY.speaking-WDn8Wm {
+  box-shadow: inset 0 0 0 2px #805d4c, inset 0 0 0 3px #000;
+}
+.background-ujHpbY {
+  background-color: transparent !important;
+}
+.tile-2naSqK {
+  background-color: transparent;
+}
+.card-3RzMcx {
+  background-color: rgba(0, 0, 0, .30) !important;
+}
+
+.emptyChannelIcon-cc932w {
+  border-radius: 7px;
+  background-color: #805d4c;
+}
+
+.theme-dark .lookFilled-1Gx00P.colorPrimary-3b3xI6 {
+  color: white;
+  background-color: transparent;
+  border: 1px solid #4f545c;
+}
+
+.wrapper-39oAo3 {
+  background-color: rgba(0, 0, 0, .23);
+}
+
+.tutorial-3w5I9h {
+  background-color: rgba(0, 0, 0, .26);
+}
+
+.selected-3xBBKs, .selected-3xBBKs:hover {
+  background-color: rgba(0, 0, 0, .23);
+}
+
+.settingCard-3w2mVL.active-1ytUzX {
+  background: rgba(0, 0, 0, .7);
+}
+
+.settingCard-3w2mVL {
+  background: rgba(0, 0, 0, .7);
+  border-radius: 5px;
+}
+
+.cardFolder-28dwxo {
+  background-color: transparent;
+}
+
+.selected-3xBBKs .icon-2VCx8O, .selected-3xBBKs:hover .icon-2VCx8O, .icon-2VCx8O {
+  color: white;
+}
+
+.theme-dark .activeButton-rvKcqq, .theme-dark .activeButton-rvKcqq:hover {
+ background-color:#805d4c;
+}
+
+.pageButton-2ruNwd:hover {
+  color: white;
+  background-color: #946f5e;
+}
+
+.roundButton-CEHyUp {
+  border-radius: 4px;
+}
+
+.button-F9qN4n {
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, .17) !important;
+}
+.customItem-a8hq58 {
+  border-color: transparent;
+  color: white;
+}
+
+.option-3KoAJB.focused-1T6PE5 {
+  color: white; 
+  background-color: #805d4c;
+}
+
+.theme-dark .barBase-1c2Rfb {
+  background-color:rgba(0, 0, 0, .34);
+  opacity: .75;
+}
+
+.item-26Dhrx:hover:not([aria-checked=true]) {
+  background-color: transparent;
+  border: 2px solid #805d4c;
+  color: white;
+}
+
+
+
 .layers-3iHuyZ {
   background-color: rgba(0,0,0,.76);
 }
@@ -84,7 +222,8 @@
   box-shadow: none;
 }
 
-.colorHeaderSecondary-3Sp3Ft {
+.colorHeaderSecondary-3Sp3Ft,
+.colorHeaderPrimary-26Jzh- {
   color: white;
 }
 
@@ -2270,7 +2409,7 @@
 .bda-slist .bda-footer a, .markup-2BOw-j a, .topic-TCb_qw a, .theme-dark .filenameLinkWrapper-1-14c5, .theme-dark .filenameLinkWrapper-1-14c5 a,
 .fakeLink-26oLcc, .operations-36ENbA>a, .colorStandard-2KCXvj a, .checkboxLabel-1zn0UC a, .markup-2BOw-j a, .welcomeMessage-ULm0mo a, .emptyStateCTA-veJ2Cu a,
 .helpText-h3r3wC a, .colorStandard-2KCXvj a,
-.editChannelButton-1dYN-G {
+.editChannelButton-1dYN-G, .button-18p_f6, .footerText-2a7NxZ a {
   color: lightgreen;
 }
 
